--- a/app-android/app/build.gradle
+++ b/app-android/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     androidTestImplementation 'org.codehaus.jackson:jackson-mapper-asl:1.9.2'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
 }
 repositories {
     mavenCentral()
