--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
 		"dompurify": "2.0.3",
 		"mithril": "2.0.4",
 		"qrcode-svg": "1.0.0",
+		"rollup": "^1.21.2",
 		"squire-rte": "1.9.0",
-		"systemjs": "0.20.19"
+		"systemjs": "6.1.0"
 	},
 	"devDependencies": {
-		"babel-core": "6.26.3",
-		"babel-plugin-transform-class-properties": "6.24.1",
-		"babel-plugin-transform-flow-strip-types": "6.22.0",
-		"babel-preset-bluebird": "^1.0.1",
-		"babel-preset-es2015": "6.24.1",
+		"@babel/core": "^7.6.0",
+		"@babel/plugin-proposal-class-properties": "^7.5.5",
+		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
+		"@babel/preset-flow": "^7.0.0",
 		"body-parser": "1.18.3",
 		"caller": "1.0.1",
 		"chalk": "2.4.2",
@@ -52,13 +52,11 @@
 		"node-static": "0.7.11",
 		"ospec": "4.0.1",
 		"request": "2.88.0",
+		"rollup-plugin-babel": "^4.3.3",
+		"rollup-plugin-commonjs": "^10.1.0",
 		"server-destroy": "1.0.1",
 		"sha": "2.0.1",
 		"spdy": "3.4.7",
-		"systemjs-builder": "0.16.13",
-		"systemjs-hmr": "git+https://github.com/mpfau/systemjs-hmr.git#temp",
-		"systemjs-hot-reloader": "git+https://github.com/mpfau/systemjs-hot-reloader.git#temp",
-		"systemjs-plugin-babel": "0.0.25",
 		"winreg": "1.2.4",
 		"xhr2": "0.1.4"
 	}
