--- a/package.json
+++ b/package.json
@@ -27,6 +27,15 @@
 		"@babel/core": "^7.6.0",
 		"@babel/plugin-proposal-class-properties": "^7.5.5",
 		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
+		"@babel/plugin-transform-arrow-functions": "^7.2.0",
+		"@babel/plugin-transform-classes": "^7.5.5",
+		"@babel/plugin-transform-computed-properties": "^7.2.0",
+		"@babel/plugin-transform-destructuring": "^7.6.0",
+		"@babel/plugin-transform-for-of": "^7.4.4",
+		"@babel/plugin-transform-parameters": "^7.4.4",
+		"@babel/plugin-transform-shorthand-properties": "^7.2.0",
+		"@babel/plugin-transform-spread": "^7.2.2",
+		"@babel/plugin-transform-template-literals": "^7.4.4",
 		"@babel/preset-flow": "^7.0.0",
 		"body-parser": "1.18.3",
 		"caller": "1.0.1",
@@ -52,8 +61,10 @@
 		"node-static": "0.7.11",
 		"ospec": "4.0.1",
 		"request": "2.88.0",
+		"rollup-plugin-analyzer": "^3.2.1",
 		"rollup-plugin-babel": "^4.3.3",
 		"rollup-plugin-commonjs": "^10.1.0",
+		"rollup-plugin-terser": "^5.1.2",
 		"server-destroy": "1.0.1",
 		"sha": "2.0.1",
 		"spdy": "3.4.7",
